// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-diagnostics - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Debug Azure production issues on Azure using AppLens, Azure Monitor, resource health, and safe triage. WHEN: debug production issues, troubleshoot app service, app service high CPU, app service deployment failure, troubleshoot container apps, troubleshoot functions, troubleshoot AKS, kubectl cannot connect, kube-system/CoreDNS failures, pod pending, crashloop, node not ready, upgrade failures, analyze logs, KQL, insights, image pull failures, cold start issues, health probe failures, resource health, root cause of errors, troubleshoot event hubs, troubleshoot service bus, messaging SDK error, AMQP connection failure, message lock lost, service bus dead letter. DO NOT USE FOR: Azure Local infrastructure, Arc resource bridge, custom location, SDN on Azure Local, Azure Local update/upgrade failures, or Arc VMs on Azure Local; use azure-local.",
  "extractedKeywords": [
    "aks",
    "amqp",
    "analyze",
    "app service",
    "applens",
    "apps",
    "azure",
    "azure-local",
    "bridge",
    "cannot",
    "cause",
    "cli",
    "cold",
    "connect",
    "connection",
    "container",
    "coredns",
    "crashloop",
    "custom",
    "dead",
    "debug",
    "deploy",
    "deployment",
    "diagnostic",
    "diagnostics",
    "error",
    "errors",
    "event",
    "failure",
    "failures",
    "function",
    "functions",
    "health",
    "high",
    "hubs",
    "image",
    "infrastructure",
    "insights",
    "issues",
    "kube-system",
    "kubectl",
    "kubernetes",
    "letter",
    "local",
    "location",
    "lock",
    "logs",
    "lost",
    "mcp",
    "message",
    "messaging",
    "monitor",
    "networking",
    "node",
    "pending",
    "probe",
    "production",
    "pull",
    "ready",
    "resource",
    "root",
    "safe",
    "service",
    "start",
    "triage",
    "troubleshoot",
    "update",
    "upgrade",
    "using",
    "when",
  ],
  "name": "azure-diagnostics",
}
`;

exports[`azure-diagnostics - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "aks",
  "amqp",
  "analyze",
  "app service",
  "applens",
  "apps",
  "azure",
  "azure-local",
  "bridge",
  "cannot",
  "cause",
  "cli",
  "cold",
  "connect",
  "connection",
  "container",
  "coredns",
  "crashloop",
  "custom",
  "dead",
  "debug",
  "deploy",
  "deployment",
  "diagnostic",
  "diagnostics",
  "error",
  "errors",
  "event",
  "failure",
  "failures",
  "function",
  "functions",
  "health",
  "high",
  "hubs",
  "image",
  "infrastructure",
  "insights",
  "issues",
  "kube-system",
  "kubectl",
  "kubernetes",
  "letter",
  "local",
  "location",
  "lock",
  "logs",
  "lost",
  "mcp",
  "message",
  "messaging",
  "monitor",
  "networking",
  "node",
  "pending",
  "probe",
  "production",
  "pull",
  "ready",
  "resource",
  "root",
  "safe",
  "service",
  "start",
  "triage",
  "troubleshoot",
  "update",
  "upgrade",
  "using",
  "when",
]
`;
